version 1.8.3, in progress
- Fix bug 2819633
- $stopwatch: use times() function if available, to include
  execution time of child processes
- Add function "mreverse" to reverse rows or columns of
  a matrix
- Several small fixes and enhancements for interaction with
  TRAMO/SEATS and X-12-ARIMA
- Several small GUI fixes
- Add (optional) support for Ox programs via the "foreign"
  command

7/8/2009 version 1.8.2
- Fixes for GARCH "corner cases"
- "summary" command: add --simple and --by=byvar options
- Fix another XLS import bug
- nls, mle, gmm, arma: allow continuation of scripts when
  these estimators fail to converge, in which case the variable
  $error is set to a non-zero value (new --continue option)
- "fcast" command: add more forecast evaluation statistics
- Add fcstats function to provide statistics for evaluation of
  forecasts
- GUI model window, Graphs menu: add scatter plot of actual vs
  fitted a la Theil
- Rationalize use of GRETL_KEEP_GOING and halt_on_error: induce
  consistency between CLI and GUI programs
- xtab command: add --matrix option to take frequencies from
  a named matrix
- add "anova" command (one-way and two-way) plus GUI menu entry
- Main window: make column headings clickable for sorting
  variables by ID number or name
- Enhancements to Edit Attributes dialog for data series
- "heckit command": fix problem with some residuals being
  unavailable via $uhat
- Printing: fix bad output from "pergm" command when the 
  spectral density is very large
- Printing: revise printout of summary statistics for better
  consistency in non-English locales and for long variable
  names
- Fix bug: allow for the fact that TRAMO truncates long variable
  names to 8 characters in the names of its output file
- Fix bug: ensure that old X-12-ARIMA output files get deleted
  before a new run
- TRAMO and X-12-ARIMA: try to provide better information in
  case of errors 
- Add GUI option: suppress detailed printout from X-12-ARIMA