@@ -9,6 +9,9 @@ version 1.8.3, in progress
 - Several small GUI fixes
 - Add (optional) support for Ox programs via the "foreign"
   command
+- Ctrl-X in editing windows: cut text, don't exit
+- Data importers: add a comment to the imported dataset
+  saying where it came from
 
 7/8/2009 version 1.8.2
 - Fixes for GARCH "corner cases"
